# Homegear-PhilipsHue

./: .project  CMakeLists.txt  Makefile  README.md  config.h  config.status  configure  configure.ac  libtool  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: philipshue.conf
misc/Device Description Files/: Group.xml  LCT.xml  LCT001.xml  LLC001.xml  LST001.xml  LWB.xml  LWB004.xml  Philips-PHDL00.xml  Switch.xml
misc/Device Description Files/l10n/en-US/: LCT.xml
misc/UI Translations/de-DE/: admin.de-DE.yaml
misc/UI Translations/de_DE/: admin.de_DE.yaml
misc/UI Translations/en-US/: admin.en-US.yaml
misc/UI Translations/en_US/: admin.en_US.yaml
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile  Makefile.am  Makefile.in  PacketManager.cpp  PacketManager.h  PhilipsHue.cpp  PhilipsHue.h  PhilipsHueCentral.cpp  PhilipsHueCentral.h  PhilipsHueDevice.cpp  PhilipsHueDevice.h  PhilipsHueDeviceTypes.h  PhilipsHuePacket.cpp  PhilipsHuePacket.h  PhilipsHuePeer.cpp  PhilipsHuePeer.h
src/.deps/: Factory.Plo  GD.Plo  PacketManager.Plo  PhilipsHue.Plo  PhilipsHueDevice.Plo  PhilipsHuePacket.Plo  PhilipsHuePeer.Plo
src/LogicalDevices/: PhilipsHueCentral.cpp
src/LogicalDevices/.deps/: PhilipsHueCentral.Plo
src/PhysicalInterfaces/: HueBridge.cpp  HueBridge.h  IPhilipsHueInterface.cpp  IPhilipsHueInterface.h
src/PhysicalInterfaces/.deps/: HueBridge.Plo  IPhilipsHueInterface.Plo
